--- a/multidisaggsec/approachPre.tex
+++ b/multidisaggsec/approachPre.tex
@@ -1,4 +1,4 @@
-\section{Temporal Data Mining and the Probabilistic Model}
+\section{Temporal Data Mining}
 Temporal datasets display a character of time-dependency. 
 They are recorded frequently in smart buildings 
 and build scenarios to infer the energy usage of people.
@@ -27,4 +27,4 @@ The frequency threshold is decided by a user.
 
 Motif mining is a temporal data mining technique that was initially proposed in ~\cite{motif1} and \cite{motif2} and extensively studied in \cite{minnen2007improving, tanaka2005discovery, motifgoal}. The fundamental idea behind \emph{motif mining} is that it symbolically encodes the numerical time series data. After this encoding, the symbols combine to form episodes in the data, resulting in patterns that can be mined. Furthermore, by combining domain-specific information and pattern mining techniques, we extract frequent,  meaningful episodes from the symbolized time series.
 
-Furthermore, when there are time series that describe the data, we employ \emph{multi-variate motif mining} to find meaningful patterns. The algorithms for multi-variate temporal motif mining are similar to the univariate case, except that the symbolic encoding is represented as a vector. Therefore each time point in the data is represented as a vector of symbols, with each symbol corresponding to one of the several time series that represents the data. Now, the combination of these vector symbols forms episodes that can be mined from the multi-variate time series data. Again, by combining domain specific knowledge, we extract meaningful episodes from the data.
+%Furthermore, when there are time series that describe the data, we employ \emph{multi-variate motif mining} to find meaningful patterns. The algorithms for multi-variate temporal motif mining are similar to the univariate case, except that the symbolic encoding is represented as a vector. Therefore each time point in the data is represented as a vector of symbols, with each symbol corresponding to one of the several time series that represents the data. Now, the combination of these vector symbols forms episodes that can be mined from the multi-variate time series data. Again, by combining domain specific knowledge, we extract meaningful episodes from the data.
