--- a/multidisaggsec/evaluation.tex
+++ b/multidisaggsec/evaluation.tex
@@ -7,7 +7,7 @@
 %among those disaggregated energy, how much percentage
 %are disaggregated right.
 %
-I use precision, recall and F-measure in our evaluation. The standard
+We use precision, recall and F-measure in our evaluation. The standard
 definitions of these metrics are:
 %\begin{equation}
 $\textrm{precision}=\frac{TP}{TP+FP}$, 
