--- a/multidisaggsec/formalism.tex
+++ b/multidisaggsec/formalism.tex
@@ -1,6 +1,6 @@
 \section{Disaggregation Formalism}
-I propose a semi-supervised approach for disaggregation; i.e.
-I assume that we know the on and off events for a short period of time for all devices or water end uses, 
+We propose a semi-supervised approach for disaggregation; i.e.
+We assume that we know the on and off events for a short period of time for all devices or water end uses, 
 and use that information to deduce the power levels or water usage, 
 or to obtain the startup vectors of every device.
 
