--- a/kddEnergy.tex
+++ b/kddEnergy.tex
@@ -32,8 +32,8 @@
 %\acmISBN{123-4567-24-567/08/06}
 
 %Conference
-\acmConference[KDD'17]{ACM Woodstock conference}{August 2017}{Halifax, Nova Scotia, Canada} 
-\acmYear{2017}
+%\acmConference[KDD'17]{ACM Woodstock conference}{August 2017}{Halifax, Nova Scotia, Canada} 
+%\acmYear{2017}
 \copyrightyear{2017}
 
 %\acmPrice{15.00}
